# ai-rag-resume-api

./: .env.example  README.md  config.py  main.py  pyproject.toml  requirements.txt
agents/: agents.py  base.py  experience.py  streaming.py
data/: certifications.md  education.md  experience.md  profile.md  projects.md  resume.json  technologies.md
scripts/: build_memory.py
utils/: embedder.py  llm_groq.py  llm_stream.py  retriever.py
vector_store/: certifications.index  certifications.json  education.index  education.json  experience.index  experience.json  profile.index  profile.json  projects.index  projects.json  technologies.index  technologies.json
