[project]
name = "ai-rag-resume-api"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) API for context-aware resume information retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "faiss-cpu",
    "python-dotenv",
    "openai",
    "sentence-transformers",
]
